[gd_scene load_steps=10 format=3 uid="uid://bwcqdeqg2myun"]

[ext_resource type="Texture2D" uid="uid://o2nrs4lxpydc" path="res://assets/game/objects/basic_grass_biome_things.png" id="1_70ahf"]
[ext_resource type="Shader" uid="uid://bs0nj1oyehxji" path="res://scenes/objects/shake.gdshader" id="1_f5itc"]
[ext_resource type="PackedScene" uid="uid://iw6ss4ln5i0p" path="res://scenes/components/hurt_component.tscn" id="2_msy0l"]
[ext_resource type="Script" uid="uid://csf68wc5qbcx7" path="res://scenes/objects/rocks/rock.gd" id="3_bntui"]
[ext_resource type="PackedScene" uid="uid://csdxbnarg0twl" path="res://scenes/components/damage_component.tscn" id="3_f5itc"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bntui"]
resource_local_to_scene = true
shader = ExtResource("1_f5itc")
shader_parameter/shake_intensity = 0.0
shader_parameter/shake_speed = 20.0

[sub_resource type="AtlasTexture" id="AtlasTexture_aw33s"]
atlas = ExtResource("1_70ahf")
region = Rect2(128, 16, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_msy0l"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_bntui"]
radius = 6.0

[node name="Rock" type="Sprite2D"]
material = SubResource("ShaderMaterial_bntui")
position = Vector2(0, -4)
texture = SubResource("AtlasTexture_aw33s")
script = ExtResource("3_bntui")

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("CircleShape2D_msy0l")

[node name="HurtComponent" parent="." instance=ExtResource("2_msy0l")]
tool = 1

[node name="HurtComponentCollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
shape = SubResource("CircleShape2D_bntui")
debug_color = Color(0.8201856, 0.2947285, 0.6984088, 0.41960785)

[node name="DamageComponent" parent="." instance=ExtResource("3_f5itc")]
max_damage = 5

[node name="ShakeTimer" type="Timer" parent="."]
one_shot = true
